# EntitySystem

./: .gitignore  c++ meta programming pages.txt
src/: CMakeLists.txt  Component.hpp  Entity.hpp  EntitySystem.cpp  EntitySystem.hpp  Lists.hpp  MetaLibrary.hpp  System.hpp  Vectors.hpp  main.cpp
src/MetaLibrary/: Conditional.hpp  Meta.txt  MultiContainer.hpp  TupleUtilities.hpp  VariadicIndexing.hpp  VariadicTypedef.hpp  VariadicUtilities.hpp
